fix: fix nav header on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,6 @@ footer p {
 
   header {
     padding: 12px 20px;
-    flex-direction: column;
     gap: 12px;
   }
 
